--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         }
     },
     "scripts": {
+        "run-serve": "@php artisan serve --port=8000 -vvv",
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
